--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
         condition: service_healthy
 
     # Run migrations and start the app
-    command: sh -c "npx prisma migrate deploy && node dist/index.js"
+    command: sh -c "npx prisma migrate deploy && npx prisma db seed && node dist/index.js"
 
 volumes:
   postgres_data:
