--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,2 @@
-VITE_API_URL=http://localhost:3000/api
-# VITE_API_URL=/api
-
-# This was inserted by `prisma init`:
-[object Promise]
+# VITE_API_URL=http://localhost:3000/api
+VITE_API_URL=/api
