--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
 		"db:reset": "prisma migrate reset"
 	},
 	"prisma": {
-		"seed": "ts-node prisma/seed.ts"
+		"seed": "node prisma/seed.js"
 	},
 	"keywords": [],
 	"author": "",
