--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,7 +11,7 @@
 
 		"skipLibCheck": true,
 		"typeRoots": ["./node_modules/@types", "./types"],
-		"types": ["node", "express", "jest", "supertest"],
+		"types": ["node", "express"],
 		"resolveJsonModule": true
 	},
 	"include": ["src/**/*", "types/**/*"],
